@@ -24,10 +24,12 @@ Version 1.4.22 - SVN
     (core support for such is not new).
   - Gmail doens't support standard search commands; removed sort buttons.
   - Forced addition of a file suffix to attachments that lack a filename
-    (helps forwarded messages avoid spam filters) (Thanks to Petr
+    (helps forwarded messages avoid spam filters) (thanks to Petr
     Kletecka) (#3139004).
   - Fixed missing security token in listcommands plugin.
-  - Added smtp_auth hook (Thanks to Emmanuel Dreyfus).
+  - Added smtp_auth hook (thanks to Emmanuel Dreyfus).
+  - Made speed enhancements to threaded message display (thanks to Siim
+    Poder) (#3288123).
 
 Version 1.4.21 - 23 Jul 2010
 ----------------------------
